--- a/TavernaMobile/res/values/strings.xml
+++ b/TavernaMobile/res/values/strings.xml
@@ -3,15 +3,12 @@
     <string name="authority">cs.man.ac.uk.tavernamobile</string>
     <string name="main_activity_title">TavernaMobile</string>
     
-    <string name="arrow_down_image">arrow_down</string>
-    <string name="looking_for_workflows">Looking for workflows ?</string>
-    <string name="search_for_it">Search for workflows</string>
-    <string name="search_hints">e.g gene annotation</string>
+    <string name="test_button_name">Start Test</string>
+    <string name="Default_avatar">Default user avatar</string>
+    
+    <!-- Main screen -->
     <string name="powered_by">Powered by</string>
     <string name="powered_by_cont">Taverna</string>
-    <string name="search_image_button_description">search_action</string>
-    <string name="myExperiment_logo_description">myExperiment_logo</string>
-    
     <string name="title_section3">Runs</string>
     <string name="title_section2">Workflows</string>
     <string name="title_section1">Explore</string>
@@ -25,6 +22,7 @@
         <item>Title</item>
         <item>Name</item>
     </string-array>
+    
     <!-- expo single row strings -->
     <string name="wfexpo_sr_created_on">Created on:</string>
     <string name="wfexpo_sr_last_update">Last update:</string>
@@ -46,6 +44,7 @@
     <!-- Main screen Workflows fragments String  -->
     <string name="Last_Launch_Text">Last Launch: </string>
     <string name="First_Launch_Text">First Launch: </string>
+    <string name="Workflow_frag_default_message">No saved workflow</string>
     
   	<!-- Workflow Details fragments Strings -->
     <string name="workflow_detail_title_section1">Preview</string>
@@ -55,14 +54,16 @@
     <string name="wfpreview_image_contentDescription">workflow preview image</string>
     <string name="wfDetail_preview_not_available_text">Preview not available</string>
     
+    <!-- Search screen -->
+    <string name="search_for_it">Search for workflows</string>
+    <string name="search_hints">e.g gene annotation</string>
+    <string name="search_image_button_description">search_action</string>
+    <string name="myExperiment_logo_description">myExperiment_logo</string>
+    <string name="SplashScreenImageDescription">Taverna</string>
+    <string name="List_Footer_Text">Loading &#8230;</string>
+    
     <string name="input_detail_title_section1">Input Value</string>
     <string name="input_detail_title_section2">Description and Sample value</string>
-    
-    <string name="test_button_name">Start Test</string>
-    
-    <string name="SplashScreenImageDescription">Taverna</string>
-    <string name="Default_avatar">Default user avatar</string>
-    <string name="Workflow_frag_default_message">No saved workflow</string>
     
     <!-- Taverna Server Login page -->
     <string name="Taverna_Server_login_title">Login to Taverna Server : </string>
@@ -70,6 +71,7 @@
     <string name="LoginPassWordText">Password : </string>
     <string name="ServerText">Server : </string>
     <string name="LoginButtonLabel">Login</string>
+    <string name="BackButtonLabel">Back</string>
     
     <!-- myExperiment Login page -->
     <string name="myExperiment_login_title">Login to </string>
@@ -86,8 +88,31 @@
     <string name="MonitorScreen_EndTime">Finished at : </string>
     <string name="MonitorScreen_RunningTime">Running Time : </string>
     <string name="MonitorScreen_DefaultMessage">Reading data&#8230;</string>
+
+    <!-- Setting screen -->
+    <string name="Launch_history_limit">Launch History Limit</string>
+    <string name="max_num_records">Maximun Number Of Records</string>
+    <string name="max_num_records_summary">
+        Set maximun number of Launch history records per workflow
+    </string>
     
-    <string name="List_Footer_Text">Loading &#8230;</string>
+    <string name="Monitoring_setting">Monitoring Setting</string>
+    <string name="run_refresh_rate_setting">Run state refresh rate</string>
+    <string name="run_refresh_rate_setting_summary">
+        Set the run state refresh rate
+    </string>
+    <string-array name="refreshFrequency">
+        <item name="0.5">0.5 seconds</item>
+        <item name="1">1 seconds</item>
+        <item name="2">2 seconds</item>
+        <item name="5">5 seconds</item>
+    </string-array>
+    <string-array name="refreshFrequencyValues">
+         <item name="0.5">500</item>
+        <item name="1">1000</item>
+        <item name="2">2000</item>
+        <item name="5">5000</item>
+    </string-array>
     
     <!-- dialog text -->
     <string name="netrual_dialog_button_text">OK</string>
